# server/src/schemas/pgzod/usersRead.ts
@@ -6,12 +6,12 @@ export const UsersRead = z.object({
   password_hash: z.string(),
   created_at: z.string(),
   updated_at: z.string(),
-  account_number: z.string().nullable().optional(),
-  routing_number: z.string().nullable().optional(),
-  account_type: z.string().nullable().optional(),
-  contact_email: z.string().nullable().optional(),
-  contact_phone: z.string().nullable().optional(),
-  account_name: z.string().nullable().optional(),
+  account_number: z.string(),
+  routing_number: z.string(),
+  account_type: z.string(),
+  contact_email: z.string(),
+  contact_phone: z.string(),
+  account_name: z.string(),
 });
 
 export type UsersReadT = z.infer<typeof UsersRead>;
